<resources>
    <string name="app_name">&appname;</string>
    <string name="app_name_no_space">&appname;</string>
    <string name="smartsense">SmartSense</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="log_in">Giriş</string>
    <string name="login_email">Email</string>
    <string name="forget_password">Şifremi unuttum?</string>
    <string name="create_an_account">Hesabınız yok mu?</string>
    <string name="password">Şifre</string>
    <string name="currenct_password">Şu anki şifreniz</string>
    <string name="new_password">Yeni şifreniz</string>
    <string name="password_change">Şifre Değiştir</string>
    <string name="log_in_button">GİRİŞ</string>
    <string name="sign_up_button">KAYDOL</string>
    <string name="sign_up">Kayıt Ol</string>
    <string name="create_account">Hesap Oluştur</string>
    <string name="have_account">Zaten hesabınız var mı?</string>
    <string name="reset_password">Şifreyi Sıfırla</string>
    <string name="send_reset">Gönder</string>
    <string name="authentication_failed">Kimlik doğrulama başarısız oldu</string>
    <string name="connection_established">Bağlantı kurulmadı</string>
    <string name="connection_failed">Bağlantı başarısız oldu</string>
    <string name="logout">Oturumu kapat</string>
    <string name="sign_in_dot">Oturum açılıyor…</string>
    <string name="data_check">Verileriniz kontrol ediliyor…</string>
    <string name="sign_invalid_pass">Şifre geçersiz.</string>
    <string name="email_empty">Email adresi boş olamaz</string>
    <string name="error_invalid_email">Geçersiz email adresi</string>
    <string name="error_invalid_password">Şifre çok kısa. En az 6 karakter.</string>
    <string name="pass_empty">Şifre boş olamaz</string>
    <string name="name_empty">Ad soyad boş olamaz</string>
    <string name="phone_empty">Telefon numarası boş olamaz</string>
    <string name="enter_valid_name">Geçerli bir ad giriniz.</string>
    <string name="enter_valid_surname">Geçerli bir soyad giriniz.</string>
    <string name="enter_valid_email">Lütfen geçerli bir e-mail adresi giriniz.</string>
    <string name="enter_valid_password">Lütfen 6–18 karakter arası bir şifre giriniz.</string>
    <string name="doctor_id_empty">Doktor ID boş olamaz</string>
    <string name="register_dot">Kaydolunuyor…</string>
    <string name="password_reset_info">Şifre sıfırlama maili gönderildi. Lütfen email adresinizi kontrol edin!</string>
    <string name="password_resetting">Şifre sıfırlama emaili gönderiliyor…</string>
    <string name="verification_info">Doğrulama maili gönderildi. Lütfen email adresinizi kontrol edin.</string>
    <string name="error_field_required">Bu alan gereklidir</string>
    <string name="banned_info">Hesabınız, şartlarımızı ihlal ettiği için devre dışı bırakıldı.</string>
    <string name="sign_up_legal">Kaydol düğmesine tıklayarak, Hizmet Şartlarını ve Gizlilik Politakasını kabul etmiş olursunuz.</string>
    <string name="for_index_terms_conditions">Hizmet Şartlarını</string>
    <string name="for_index_privacy_policy">Gizlilik Politakasını</string>
    <string name="terms_and_conditions">Terms &#38; Conditions</string>
    <string name="noConnection">İnternet bağlantısı yok.</string>
    <string name="occurred_error">Bir hata oluştu. Hata kodu:</string>
    <string name="login_role_doctor">Mobil uygulama girişinde Doktor yönetim arayüzü açılmayacaktır. Kişisel arayüzünüz açılacaktır.</string>
    <string name="login_role_supervisor">Mobil uygulama girişinde Supervisor yönetim arayüzü açılmayacaktır. Kişisel arayüzünüz açılacaktır.</string>
    <string name="login_role_admin">Mobil uygulama girişinde Admin yönetim arayüzü açılmayacaktır. Kişisel arayüzünüz açılacaktır.</string>
    <string name="login_role_companion">Mobil uygulama girişinde Refakatçi arayüzü açılmayacaktır. Refakatçisi olduğunuz hastaları görüntülemek için web sitemiz üzerinden giriş yapınız.</string>
    <string name="account_created">Hesap oluşturuldu.</string>
    <string name="already_exists_user">E-mail adresine ait bir hesap var. Eğer sizin hesabınızsa giriş yapmayı deneyin.</string>
    <string name="account_created_error">Hesap oluşturulamadı.</string>
    <string name="login_successful">Oturum açma başarılı</string>
    <string name="user_not_found">Bu email adresine karşılık gelen bir kullanıcı kaydı yok.</string>
    <string name="error_incorrect_password">Şifre yanlış</string>
    <string name="incorrect_email_password">E-mail adresi ya da şifreniz yanlış.</string>
    <string name="data_updated">Güncellendi.</string>
    <string name="data_update_error">Güncellenemedi.</string>
    <string name="password_changed">Şifreniz değiştirildi.</string>
    <string name="password_not_changed">Şifreniz değiştirilemedi.</string>
    <string name="password_not_match">Şu anki şifreniz yanlış.</string>
    <string name="token_refreshed">Token yenilendi.</string>
    <string name="token_expried">Token süresi geçti. Yeni token alınız.</string>
    <string name="unauthorized">Bu işlemi yapmaya yetkiniz bulunmamaktadır.</string>
    <string name="forbidden">Bu işlemi yapmaya izniniz bulunmamaktadır.</string>
    <string name="data_inserted">Veri sunucuya kayıt edildi.</string>
    <string name="data_not_inserted">Veri sunucuya kayıt edilemedi.</string>
    <string name="request_ok">İstek başarılı.</string>
    <string name="internal_server">Sunucu cevap vermiyor.</string>
    <string name="bad_request">İstek başarısız.</string>
    <string name="location_permission">Lokasyon iznini vermezseniz bileklik ile bağlantı yapamazsınız.</string>
    <string name="location_permission_for_tracking">Lütfen ayarlardan \"Her zaman\" olarak lokasyon izni veriniz.</string>
    <string name="location_permission_enable">İZİN VER</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="nav_header_title">Ad Soyad</string>
    <string name="nav_header_subtitle">email@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Ayarlar</string>
    <string name="other_settings">Diğer Ayarlar</string>
    <string name="menu_home">Anasayfa</string>
    <string name="menu_connection">Bağlantı</string>
    <string name="menu_data_show">Kayıtlar</string>
    <string name="menu_add_doctor">Doktor Seçimi</string>
    <string name="menu_data_backup">Kayıtları Yedekle</string>
    <string name="menu_data_restore">Kayıtları Geri Yükle</string>
    <string name="menu_send">Kayıtları Gönder</string>
    <string name="menu_request">İstekler</string>
    <string name="connection_status">Bağlantı Durumu</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="connection_active">Aktif</string>
    <string name="connection_pasive">Pasif</string>
    <string name="wearing">Bağlantı</string>
    <string name="battery">Batarya</string>
    <string name="connection_no">Bağlantı yok</string>
    <string name="connection_no_click">Bağlantı yok. Buraya tıklayarak bağlantı yapabilirsiniz.</string>
    <string name="heart">Nabız</string>
    <string name="spo2">SpO2</string>
    <string name="temperature">Sıcaklık</string>
    <string name="temp">Ateş</string>
    <string name="location_set_wait">Konum belirleniyor bekleyiniz...</string>
    <string name="home_title">Karantina konumu belirle</string>
    <string name="home_hint">Karantina konumunuz GPS üzerinden belirlenecektir ve belirlentikten sonra konumunuzu değiştiremezsiniz.</string>
    <string name="home_location_saved">Karantina konumu kayıt edildi.</string>
    <string name="home_location_send_permission">Karantina lokasyonu belirleme ve vital verilerinizin sunucuya gönderilmesi için lütfen \"Ayarlar\" - \"Ölçüm Ayarları\" ekranındaki \"Sunucuya verileri gönderme durumu\" etkinleştiriniz.</string>
    <string name="smartsense_band">SmartSense Band</string>
    <string name="connected">bağlandı</string>
    <string name="not_connected">bağlanamadı</string>
    <string name="disconnect">Bağlantıyı Kes</string>
    <string name="disconnect_pairing">Eşleştirmeyi Kes</string>
    <string name="all_data">Tümü</string>
    <string name="backupRestore">Yedekle/Geri Yükle</string>
    <string name="back_up">Yedekle</string>
    <string name="csv_data">Veri</string>
    <string name="csv_data_type">Veri Türü</string>
    <string name="csv_save_type">Kayıt Türü</string>
    <string name="csv_time">Kayıt Zamanı</string>
    <string name="back_up_done">Yedekleme bitti.</string>
    <string name="select_backup_file">Yedek dosyasını seçiniz</string>
    <string name="write_external_permission">Eğer izin vermezseniz yedek ve geri yükleme yapamazsınız.</string>
    <string name="give_permission">İZİN VER.</string>
    <string name="backup_dot">Yedekleniyor...</string>
    <string name="backup_hint">CSV formatında yedek almak için dokununuz.</string>
    <string name="restore_hint">CSV formatında verilerinizi geri yükleyebilirsiniz.</string>
    <string name="saved_path">yoluna yedeklendi.</string>
    <string name="manuel_save">Manuel</string>
    <string name="auto_save">Oto</string>
    <string name="restore">Geri Yükle</string>
    <string name="restore_done">Verileriniz geri yüklendi.</string>
    <string name="restore_dot">Geri yükleniyor...</string>
    <string name="restore_all_count">Toplam veri sayısı:</string>
    <string name="restore_correct_count">Geri yüklenen veri sayısı:</string>
    <string name="restore_same">Aynı veri sayısı:</string>
    <string name="restore_error_count">Hatalı veri sayısı:</string>
    <string name="okay">Tamam</string>
    <string name="user">kullanıcısı</string>
    <string name="user_data">Kullanıcı Bilgileri</string>
    <string name="patient_data">Hasta Bilgileri</string>
    <string name="user_name">Ad Soyad</string>
    <string name="user_phone">Telefon</string>
    <string name="user_phone_hint">Telefon (5...)</string>
    <string name="user_email">E-mail</string>
    <string name="user_identity">T.C. Kimlik No</string>
    <string name="user_gender">Cinsiyet</string>
    <string name="user_date_of_birth">Doğum Tarihi</string>
    <string name="user_quarantine_status">Karantina Türü</string>
    <string name="user_diagnosis">Hastalık Türü</string>
    <string name="user_blood_group">Kan Grubu</string>
    <string name="doctor_id">Doktor ID</string>
    <string name="update">Güncelle</string>
    <string name="contact_status">Gözlem türü</string>
    <string name="home_quarantine">Evde karantina</string>
    <string name="hospital_quarantine">Hastanede gözlem</string>
    <string name="contact_quarantine">Temaslı kişi</string>
    <string name="miui_permission">Cihazınızın Xiaomi bir cihaz olduğu tespit edildi. Bazı Xiaomi cihazlarda SMS izni işlemini izin ayarları sayfasından yapmanız gerekmektedir.
        \nLütfen kontrol etmek için ayarlar sayfasını açınız eğer izin verilmemişse izin veriniz.\n\n \"SMS mesajı gönder\" iznine \"Her zaman izin ver\" şeklinde düzenlemeniz gerekmektedir.</string>
    <string name="miui_permission_hint">Eğer izin vermezseniz acil durumlarda SMS gönderimi yapılamayacaktır.</string>
    <string name="miui_permission_not">İzin verme</string>
    <string name="miui_permission_open">Ayarları aç</string>
    <string name="temp_schedule">Ateş Ölçüm Aralığı (Dakika)</string>
    <string name="schedule_helper_text">5 ile 360 dakika arasında bir süre belirleyebilirsiniz.</string>
    <string name="heart_schedule">Nabız Ölçüm Aralığı (Dakika)</string>
    <string name="spo2_schedule">SpO2 Ölçüm Aralığı (Dakika)</string>
    <string name="server_data_sent_status">Sunucuya verileri gönderme durumu</string>
    <string name="server_data_sent">Gönder</string>
    <string name="measurement_settings">Ölçüm Ayarları</string>
    <string name="medicine_reminding">İlaç Hatırlatma</string>
    <string name="companion">Refakatçi</string>
</resources>