<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_connection"
            android:icon="@drawable/ic_connection_24"
            android:title="@string/menu_connection" />

        <item
            android:id="@+id/nav_medicine"
            android:icon="@drawable/ic_pills"
            android:title="@string/medicine_reminding" />

        <item
            android:id="@+id/nav_data_show"
            android:icon="@drawable/ic_storage_24"
            android:title="@string/menu_data_show" />

        <item
            android:id="@+id/nav_companion"
            android:icon="@drawable/ic_companion_64"
            android:visible="false"
            android:title="@string/companion" />

        <item
            android:id="@+id/nav_add_doctor"
            android:icon="@drawable/ic_add_doctor_48"
            android:visible="false"
            android:title="@string/menu_add_doctor" />

        <item
            android:id="@+id/nav_request"
            android:icon="@drawable/ic_notifications_64"
            android:visible="false"
            android:title="@string/menu_request" />

        <item
            android:id="@+id/nav_analysis"
            android:icon="@drawable/ic_audio"
            android:title="@string/analysis" />

        <item
            android:id="@+id/nav_data_backup"
            android:icon="@drawable/ic_backup_24"
            android:title="@string/backupRestore" />

        <item
            android:id="@+id/nav_data_send"
            android:icon="@drawable/ic_send_24"
            android:title="@string/menu_send" />


    </group>
</menu>