<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/miui_permission"
        android:textColor="@color/textColorPrimary"
        android:textSize="14sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/miui_permission_hint"
        android:textColor="@color/textColorSecondary"
        android:textSize="12sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/miuiRejectPermission"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/miui_permission_not"
            android:textAllCaps="false"
            android:textSize="15sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/miuiOpenSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_weight="1"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/miui_permission_open"
            android:textAllCaps="false"
            android:textSize="15sp" />

    </LinearLayout>

</LinearLayout>