<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fragmentBackgroundColor"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:padding="@dimen/fragment_padding"
    tools:context=".settings.ScheduleSettingsActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tempScheduleTI"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/temp_schedule"
        app:boxBackgroundColor="@color/textboxColor"
        app:endIconMode="clear_text"
        app:errorEnabled="true"
        app:errorTextColor="@color/errorColor"
        app:helperText="@string/schedule_helper_text">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_medium"
            android:imeOptions="actionNext"
            android:inputType="numberDecimal"
            android:maxLength="3"
            android:maxLines="1"
            android:nextFocusForward="@id/heartScheduleTI"
            android:text="60" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/heartScheduleTI"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/heart_schedule"
        app:boxBackgroundColor="@color/textboxColor"
        app:endIconMode="clear_text"
        app:errorEnabled="true"
        app:errorTextColor="@color/errorColor"
        app:helperText="@string/schedule_helper_text">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_medium"
            android:imeOptions="actionNext"
            android:inputType="numberDecimal"
            android:maxLength="3"
            android:maxLines="1"
            android:nextFocusForward="@id/spO2ScheduleTI"
            android:text="77" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/spO2ScheduleTI"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/spo2_schedule"
        app:boxBackgroundColor="@color/textboxColor"
        app:endIconMode="clear_text"
        app:errorEnabled="true"
        app:errorTextColor="@color/errorColor"
        app:helperText="@string/schedule_helper_text">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_medium"
            android:imeOptions="actionDone"
            android:inputType="numberDecimal"
            android:maxLength="3"
            android:maxLines="1"
            android:text="35" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/scheduleUpdateBt"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="1dp"
        android:fontFamily="@font/montserrat_medium"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:text="@string/update"
        android:textSize="15sp"
        app:cornerRadius="90dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="64dp"
        android:layout_marginBottom="16dp"
        android:background="@color/dividerColor" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/server_data_sent_status"
        android:textColor="@color/textColorPrimary"
        android:textSize="14sp" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/sendDataToServerCB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/server_data_sent"
        android:textColor="@color/textColorPrimary" />


</LinearLayout>