<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fragmentBackgroundColor"
    tools:context=".ui.kayit_goster.KayitGosterFragment">

    <HorizontalScrollView
        android:id="@+id/covidTypeScroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:scrollbars="none"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/dataTypeGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/chipAllData"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/all_data" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipHeart"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/heart" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipSpO2"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/spo2" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipTemp"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/temperature" />

        </com.google.android.material.chip.ChipGroup>
    </HorizontalScrollView>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/epilepsyRecView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/covidTypeScroll"
        android:clipToPadding="false"
        tools:listitem="@layout/item_covid" />

    <!--
        android:fadeScrollbars="true"
        android:scrollbarThumbVertical="@color/colorPrimaryDark"
        android:scrollbars="vertical"
         -->
</RelativeLayout>